# coding-agent

./: .env.example  .gitignore  README.md  pyproject.toml  report.md  run.sh
src/: main.py
src/agents/: coding_agent.py  evaluation_agent.py  fix_agent.py  planning_agent.py
src/config/: settings.py
src/graph/: routers.py  state.py  workflow.py
src/tools/: __init__.py  api_fetch.py  execution.py  filesystem.py
src/ui/: display.py  input.py  welcome.py
src/utils/: logger.py
